# popupfaucet

./: .gitignore  README.md  pyproject.toml
src/popupfaucet/: __init__.py  __main__.py
