[project]
name = "popupfaucet"
version = "0.1.0-beta.2"
description = "Ethereum testnet faucet CLI"
authors = [
    { name = "wolovim", email = "3621728+wolovim@users.noreply.github.com" }
]
dependencies = [
    "click>=8.1.7",
    "rich>=13.7.1",
    "requests>=2.32.3",
    "inquirerpy>=0.3.4",
    "eth-account>=0.13.1",
    "eth-utils>=4.1.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"popupfaucet" = "popupfaucet:popupfaucet"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/popupfaucet"]
